--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "styles-variables";
+
+@import '~bootstrap/scss/bootstrap-reboot';
+@import '~bootstrap/scss/bootstrap-grid';
+
+
+body{
+  margin: 0%;
+  // background-color: #201b1b2e;
+}
+
+.container{
+  padding-top: 70px;
+  padding-left: 120px;
+}
+
+
+
+
