added httpclient service.

--- a/src/app/angular-tut/topics/angular-introd/angular-introd.component.html
+++ b/src/app/angular-tut/topics/angular-introd/angular-introd.component.html
@@ -1,3 +1,58 @@
-<p>
-  angular-introd works!
-</p>
+<div class="intro-container">
+  <div style="display: flex;">
+    <!-- <button style="margin-top: auto; margin-right: 8px" mat-button color="accent">Get Start</button> -->
+    <h3>Angular Features </h3>
+  </div>
+  <div layout="row" layout-xs="column" class="home-row homepage-container">
+    <div class="promo-img-container promo-1">
+      <!-- <div>
+        <img height="222" width="340" src="generated/images/marketing/home/responsive-framework.svg" alt="responsive framework">
+      </div> -->
+    </div>
+    <div class="text-container">
+      <div class="text-block promo-1-desc l-pad-top-2">
+        <div class="text-headline">1. Develop Across All Platforms</div>
+        <p class="text-body">
+          Write Angular code once and it can be reused for any development of all web, response mobile, native mobile and native desktop.
+          So one time investment for all platforms. One framework for web and mobile.
+        </p>
+      </div>
+    </div>
+  </div>
+  <mat-divider></mat-divider>
+
+  <div layout="row" layout-xs="column" class="home-row homepage-container">
+    <div class="promo-img-container promo-1">
+      <!-- <div>
+          <img height="222" width="340" src="generated/images/marketing/home/responsive-framework.svg" alt="responsive framework">
+        </div> -->
+    </div>
+    <div class="text-container">
+      <div class="text-block promo-1-desc l-pad-top-2">
+        <div class="text-headline">2. SPEED & PERFORMANCE</div>
+        <p class="text-body">
+          Angular widely used for to get the maximum speed by Web workers , PWA , scalability and Immutability nature of change detection
+          stratagy.
+        </p>
+      </div>
+    </div>
+  </div>
+  <mat-divider></mat-divider>
+
+  <div layout="row" layout-xs="column" class="home-row homepage-container">
+    <div class="promo-img-container promo-1">
+      <!-- <div>
+            <img height="222" width="340" src="generated/images/marketing/home/responsive-framework.svg" alt="responsive framework">
+          </div> -->
+    </div>
+    <div class="text-container">
+      <div class="text-block promo-1-desc l-pad-top-2">
+        <div class="text-headline">3. GREAT TOOLING</div>
+        <p class="text-body">
+          Using the great tooling support to create app using Angular-CLI and develop app faster using IDE's.
+        </p>
+      </div>
+    </div>
+  </div>
+  <button (click)="getStart()" mat-button color="primary">Get Start</button>
+</div>
