--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,74 +1,3 @@
-<!-- <div class="container">
-  <div class="row" style="align-items: flex-end!important;">
-    <div class="col" class="col-md-6 col-lg-4 col-sm-2">
-      <mat-card class="card-container">
-        <mat-card-header>
-          <mat-card-title>Java Script</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>
-            Java script is a UI library which browser can undestand it.
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>Docs</button>
-          <button mat-button>Topics</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="col" class="col-md-6 col-lg-4 col-sm-2">
-      <mat-card class="card-container">
-        <mat-card-header>
-          <mat-card-title>Angular</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>
-            Angular is a java script framwork which can build application faster.
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>Docs</button>
-          <button mat-button>Topics</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="col" class="col-md-6 col-lg-4 col-sm-2">
-      <mat-card class="card-container">
-        <mat-card-header>
-          <mat-card-title>Rxjs</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>
-            RxJS is a library for composing asynchronous and event-based...
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>Docs</button>
-          <button mat-button>Topics</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="col" class="col-md-6 col-lg-4 col-sm-2">
-      <mat-card class="card-container">
-        <mat-card-header>
-          <mat-card-title>Rxjs</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>
-            RxJS is a library for composing asynchronous and event-based...
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>Docs</button>
-          <button mat-button>Topics</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-  </div>
-
-</div> -->
-
-
 <div class="container">
   <div class="row">
     <div class="col-sm-3">
@@ -98,8 +27,8 @@
         <mat-card-content>
           <p>
             The Java Script is a interpreted language used to develop mainly the browser based web application and server side using
-            the nodejs.Its very easy and interesting language to learn every developer. We used Java script to add
-            behaviour to HTML elements.
+            the nodejs.Its very easy and interesting language to learn every developer. We used Java script to add behaviour
+            to HTML elements.
           </p>
         </mat-card-content>
         <mat-card-actions>
@@ -117,8 +46,7 @@
         <mat-card-content>
           <p>
             Rxjs is a powerfull library, heavly used by UI developers for reactive programming with steams of data over the period. Which
-            is very helpfull to build the complex event based application logics easily. Which is written by Ben lese a Software
-            Engineer at Google.
+            is very helpfull to build the complex event based application logics easily.
 
           </p>
         </mat-card-content>
