angular service worker

--- a/src/app/angular-tut/topics/angular-introd/angular-introd.component.html
+++ b/src/app/angular-tut/topics/angular-introd/angular-introd.component.html
@@ -1,8 +1,8 @@
-<div class="intro-container">
-  <div style="display: flex;">
-    <!-- <button style="margin-top: auto; margin-right: 8px" mat-button color="accent">Get Start</button> -->
-    <h3>Angular Features </h3>
-  </div>
+<div class="main-container">
+  <!-- <div style="display: flex;"> -->
+  <!-- <button style="margin-top: auto; margin-right: 8px" mat-button color="accent">Get Start</button> -->
+  <h3>Angular Features </h3>
+  <!-- </div> -->
   <div layout="row" layout-xs="column" class="home-row homepage-container">
     <div class="promo-img-container promo-1">
       <!-- <div>
@@ -54,5 +54,63 @@
       </div>
     </div>
   </div>
-  <button (click)="getStart()" mat-button color="primary">Get Start</button>
+  <mat-divider></mat-divider>
+  <div layout="row" layout-xs="column" class="home-row homepage-container">
+    <div class="promo-img-container promo-1">
+
+    </div>
+    <div class="text-container">
+      <div class="text-block promo-1-desc l-pad-top-2">
+        <div class="text-headline">4. Angular is best for creating Progressive Web Apps</div>
+        <p class="text-body">
+          Angular was created by Google with a mobile-first perspective. As the primary influencer of mobile technology, it makes sense
+          to create apps that are platform independent. With that vision the concept of Progressive Web Apps was born. In
+          a nutshell, it meant that one code base; written with Angular, could work seamlessly on Apple and Android devices
+          without the need to re-invent the wheel.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <mat-divider></mat-divider>
+  <div layout="row" layout-xs="column" class="home-row homepage-container">
+    <div class="promo-img-container promo-1">
+
+    </div>
+    <div class="text-container">
+      <div class="text-block promo-1-desc l-pad-top-2">
+        <div class="text-headline">5.Unit Testing Friendly</div>
+        <p class="text-body">
+          When developing a software solution, businesses are looking to leverage development processes to shorten time-to-market.
+          Its equally important to create a functional application is bug-free and has a minimum number of glitches once
+          deployed. Once again, Angular to the rescue. The modular-like components are easy to test individually. Due to
+          the simple nature of these components quality assurance procedures are streamlined and developers can validate
+          even the smallest nooks of the application.
+        </p>
+      </div>
+    </div>
+
+
+  </div>
+
+  <mat-divider></mat-divider>
+  <div layout="row" layout-xs="column" class="home-row homepage-container">
+    <div class="promo-img-container promo-1">
+
+    </div>
+    <div class="text-container">
+      <div class="text-block promo-1-desc l-pad-top-2">
+        <div class="text-headline">5.Angular Is A Fully Matured Framework</div>
+        <p class="text-body">
+          The best thing about Angular is that it has been around for almost a decade now. The first Angular version was released in
+          2009 but ever since it has only evolved into a behemoth of a framework. Now in 2018, Angular having launched its
+          sixth version, has support from thousands of developers with a range specialty in Android, iOS, full-stack, UI
+          visualization and front-end engineering.
+        </p>
+      </div>
+    </div>
+
+
+  </div>
+
 </div>
