--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,8 +32,8 @@
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
+          <!-- <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button> -->
         </mat-card-actions>
       </mat-card>
     </div>
@@ -51,8 +51,8 @@
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
+          <!-- <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button> -->
         </mat-card-actions>
       </mat-card>
     </div>
