--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -11,13 +11,13 @@
     <span class="spacer"></span>
     <span class="spacer"></span>
     <button class="title-font" mat-button>About</button>
-    <button routerLink="/hireme" class="title-font" mat-button>Hire me</button>
+    <button (click)="hireMe()" class="title-font" mat-button>Hire me</button>
   </mat-toolbar>
 
   <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-nav-list>
-        <a mat-list-item routerLink="{{nav.route}}" *ngFor="let nav of fillerNav">{{nav.name}}</a>
+        <a mat-list-item style="font-size: 12px; margin: 0px;padding: 1px;height: 35px;" routerLink="{{nav.route}}" *ngFor="let nav of fillerNav">{{nav.name}}</a>
       </mat-nav-list>
     </mat-sidenav>
 
