--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
         <mat-card-content>
           <p>
             The Angular is a powerfull java script component based framwork developed by google which can be used to develop the cross-platform
-            web application faster, modular, lazy load, reliable, bundling, reusale, testeble and get the more performance.
+            web application faster, modular, lazy load, reliable, reusale, testeble and get the more performance.
           </p>
         </mat-card-content>
         <mat-card-actions>
