--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,3 +81,11 @@ body{
 }
 
 
+.footer {
+  // position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  line-height: 60px;
+  background-color: #3f51b5;
+}
