--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -11,7 +11,7 @@
     <mat-menu #menu="matMenu">
       <button routerLink="/angular" class="menu-bar-font" mat-menu-item>Angular</button>
       <button class="menu-bar-font" mat-menu-item>Java Script</button>
-      <button class="menu-bar-font" mat-menu-item>C</button>
+      <button routerLink="/c-programming" class="menu-bar-font" mat-menu-item>C</button>
     </mat-menu>
     <span class="spacer"></span>
     <span class="spacer"></span>
