angular element s post.

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,3 +24,8 @@
   background-image: url('../../assets/rxjs.jpg');
   background-size: cover;
 }
+
+.c-header-image{
+  background-image: url('../../assets/c.png');
+  background-size: cover;
+}
