--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -9,9 +9,9 @@
     <span (click)="goToPage()" class="main-title pointer">&nbsp;Ifelseloop &nbsp; &nbsp;</span>
     <button mat-button [matMenuTriggerFor]="menu">Tutorials</button>
     <mat-menu #menu="matMenu">
-      <button routerLink="/angular" class="menu-bar-font" mat-menu-item>Angular</button>
-      <button class="menu-bar-font" mat-menu-item>Java Script</button>
-      <button class="menu-bar-font" mat-menu-item>C</button>
+      <button style="height: 36px" routerLink="/angular" class="menu-bar-font" mat-menu-item>Angular</button>
+      <button style="height: 36px" class="menu-bar-font" mat-menu-item>Java Script</button>
+      <button style="height: 36px" class="menu-bar-font" mat-menu-item>C</button>
     </mat-menu>
     <span class="spacer"></span>
     <span class="spacer"></span>
