--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,10 +7,10 @@
           <mat-card-title>Angular</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <p>
+          <!-- <p>
             The Angular is a powerfull java script component based framwork developed by google which can be used to develop the cross-platform
             web application faster, modular, lazy load, reliable, reusale, testeble and get the more performance.
-          </p>
+          </p> -->
         </mat-card-content>
         <mat-card-actions>
           <button routerLink="/angular" mat-button>Learn</button>
@@ -24,14 +24,14 @@
           <mat-card-title>Java Script</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <p>
+          <!-- <p>
             The Java Script is a interpreted language used to develop mainly the browser based web application and server side using
             the nodejs.Its very easy and interesting language to learn every developer. We used Java script to add behaviour
             to HTML elements.
-          </p>
+          </p> -->
         </mat-card-content>
         <mat-card-actions>
-          //hello
+          <button routerLink="/" mat-button>Learn</button>
         </mat-card-actions>
       </mat-card>
     </div>
@@ -42,15 +42,28 @@
           <mat-card-title>RxJS</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <p>
+          <!-- <p>
             Rxjs is a powerfull library, heavly used by UI developers for reactive programming with steams of data over the period. Which
             is very helpfull to build the complex event based application logics easily.
 
-          </p>
+          </p> -->
         </mat-card-content>
         <mat-card-actions>
-          <!-- <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button> -->
+          <button routerLink="/" mat-button>Learn</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    <div class="col-sm-3">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="c-header-image"></div>
+          <mat-card-title>C-Language</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+
+        </mat-card-content>
+        <mat-card-actions>
+          <button routerLink="c-programming" mat-button>Learn</button>
         </mat-card-actions>
       </mat-card>
     </div>
