--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,8 +76,17 @@ body{
 
 .menu-bar-font{
   font-size: 12px;
-  margin: 0px;padding: 1px;
-  height: 35px;
+  margin: 0px;
+  padding: 1px;
+  height: 35px !important;
+  line-height: 30px;
+}
+
+h1{
+    display: inline-block;
+    font-size: 22px;
+    font-weight: 500;
+    margin: 8px 0;
 }
 
 
