--- a/src/app/c-language/cintroduction/cintroduction.component.html
+++ b/src/app/c-language/cintroduction/cintroduction.component.html
@@ -1,3 +1,138 @@
-<p>
-  cintroduction works!
+<div class="main-container">
+<h1>C Language Introduction</h1>
+<p>C Language was developed by Dennis Ritchie between 1969 and 1973 at AT & T’s Bell laboratories. It is a powerful general-purpose,
+    Imperative, Procedural, computer Programming language. Initially it is used to re-implement the UNIX operating system,
+    later it has become one of the most widely used computer programming languages. C language is one of the most popular
+    programming language because it is reliable, simple and easy to use. Major parts of popular operating systems like Windows,
+    LINUX and UNIX are written in C.
 </p>
+<h2>Facts About C Programming Language</h2>
+<div class="l-sub-section">
+<ul>
+<li>The C language was first formalized by American National Standards Institutes (ANSI) in the year 1988.</li>
+<li>C was invented to write UNIX operating system.</li>
+<li>C language is a successor of B Language which was introduced in 1970's and it is also called as 'Basic Combined Programming
+        Language' (BCPL).</li>
+<li>Linux operating system, Mysql Data Base are written in C.</li>
+<li>C is a portable language, the source code written in one operating system works in another operating system without
+        any change.</li>
+</ul>
+</div>
+<h2>Uses of C Programming Language</h2>
+<p>Initially C programs are developed to make-up the operating systems. Here are some of the examples of the uses of C programming.</p>
+<div class="l-sub-section">
+<ul>
+<li>Operating Systems</li>
+<li>Network Drivers</li>
+<li>Databases</li>
+<li>Compilers</li>
+<li>Assemblers</li>
+<li>Text Editors</li>
+<li>Modern Programs</li>
+<li>Mobile Applications</li>
+<li>Desktop Applications</li>
+<li>Games & Animations etc.</li>
+</ul>
+</div>
+<h2>Advantages of C Programming language</h2>
+<ul>
+<li>Programs written in C are very efficient, fast and easy to understand</li>
+<li>C is a medium level language, it can be used for both low-level and high-level languages.</li>
+<li>C is a structured programming language, where complex programs to be broken into simple programs called Functions.</li>
+<li>C is a portable, which means source code written in one computer works in another computer without any changes in the
+      source code.</li>
+<li>C language is the building blocks of many other popular programming languages.</li>
+<li>C has a built-in library which provides number of functions.</li>
+</ul>
+<h2>Disadvantages of C Programming Language</h2>
+<ul>
+<li>C is a Procedural Oriented language. It doesn’t have the concept of Object Oriented Programming (OOP) features.</li>
+<li>The Major disadvantage of C language is runtime type checking in not available.</li>
+<li>C doesn’t provide constructors and Destructors.</li>
+<li>C doesn’t have the concept of NameSpace like C++.</li>
+</ul>
+<p>Now lets see how to compile and run C programs in your os. These are necessary steps for executing C programs on your computer.</p>
+<h2>Setting up Compile and run C Program on your OS</h2>
+<p>For running a C program you need compilers and text editors. There are number of Compilers and Text editors. Here I will
+    show you two easy methods for compilation and execution of your C programs. You can use any one of these two methods.</p>
+<h3>Method 1: Run C program online</h3>
+<p>There are several tools and sites you can use to compile and run your C program. But, I personally prefer
+    <a href='https://ideone.com/' target='_blank' rel="nofollow">ideone.com</a>. It is very simple tool and easy to compile and run your C programs.</p>
+  <strong>Go to
+    <a href='https://ideone.com/' target='_blank' rel="nofollow">ideone.com</a> > write a Programe > Run</strong>
+<br>
+<br>
+<h3>Method 2: Run C program in Windows Operating System</h3>
+<p>Compile and run C program in Windows you need to download a software called Code:Blocks. In this method I will show you
+    how to download the software, writing C program, save with .c extension and running the program.</p>
+<div class="text-headline">
+<strong>Step 1:</strong> Go to
+  <a href='http://www.codeblocks.org/downloads/26' target='_blank' rel="nofollow">binary download page of Code::Block</a>.
+</div>
+<div class="text-headline">
+    <strong>Step 2:</strong>Under
+    <strong>Windows XP/Vista/7/8.x/10</strong> click the link mingw-setup.exe from
+    <strong>Sourceforge.net</strong>> as highlighted in the below image. Then the software will start downloading.
+</div>
+<div>
+<img src="../../../assets/download-code-blocks.jpg" height="400px" width="100%" />
+</div>
+<div class="text-headline">
+    <strong>Step 3:</strong> Now open the downloaded Code::Block file and click NEXT.
+</div>
+<div>
+<img src="../../../assets/open-downloaded-code-block.jpg" height="400px" width="100%" />
+</div>
+<div class="text-headline">
+    <strong>Step 4:</strong> click AGREEE
+</div>
+<div>
+<img src="../../../assets/c-introduction4.jpg" height="400px" width="100%" />
+</div>
+<div class="text-headline">
+    <strong>Step 5:</strong> click NEXT
+</div>
+<div>
+<img src="../../../assets/c-introduction5.jpg" height="400px" width="100%" />
+</div>
+<div class="text-headline">
+    <strong>Step 6:</strong> click on INSTALL
+</div>
+<div>
+<img src="../../../assets/c-introduction6.jpg" height="400px" width="100%" />
+</div>
+<div class="text-headline">
+<strong>Step 7:</strong> After install click on NEXT
+</div>
+<div>
+<img src="../../../assets/c-introduction7.jpg" height="400px" width="100%" />
+</div>
+<div class="text-headline">
+    <strong>Step 8:</strong> click on FINISH. Now you no need change anything, the software is installed successfully.
+</div>
+<div>
+<img src="../../../assets/c-introduction8.jpg" height="400px" width="100%" />
+</div>
+<div class="text-headline">
+    <strong>Step 9:</strong>Now open the Code::Block and go to FILE > NEW > EMPTY FILE (shortcut: ctrl + shift + N) to open a new
+    file for writing a C program.
+</div>
+<div>
+<img src="../../../assets/c-introduction9.jpg" height="400px" width="100%" />
+</div>
+<div class="text-headline">
+    <strong>Step 10:</strong> write the C program and save the program file with .c extenstion. To save the program file, go to FILE
+    > SAVE (shortcut: ctrl + s).
+    <strong>Note:</strong> The program file name must end with .c extension like “programname.c”.
+</div>
+<div class="text-headline">
+    <strong>Step 11:</strong> After completing the program go to BUILD > BUILD and RUN (shortcut: F9). Then the program will run
+    and produce the output on executable file.
+</div>
+<div>
+<img src="../../../assets/c-introduction11.jpg" height="30%" width="100%" />
+</div>
+<p>This is the easy way to compile and run the C programs in your operating system.</p>
+<p>I hope that this complete C tutorial guide will give you a clear idea about what is C language and complete knowledge on
+    C programming. But before we enter in to programming you need to learn some basics concepts like what are constants,
+    Variables, Identifiers and Keywords. We will discuss all these topics in the next chapter, stay tuned…</p>
