--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,7 +31,7 @@
           </p> -->
         </mat-card-content>
         <mat-card-actions>
-          <button routerLink="/" mat-button>Learn</button>
+          <button routerLink="/js-module" mat-button>Learn</button>
         </mat-card-actions>
       </mat-card>
     </div>
