--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,4 +97,6 @@ h1{
   height: 50px;
   line-height: 60px;
   background-color: #3f51b5;
+ -webkit-font-smoothing: antialiased;
+ display: block;
 }
