--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -12,6 +12,7 @@
       <button routerLink="/angular" class="menu-bar-font" mat-menu-item>Angular</button>
       <button routerLink="/js-module" class="menu-bar-font" mat-menu-item>Java Script</button>
       <button routerLink="/c-programming" class="menu-bar-font" mat-menu-item>C</button>
+      <button routerLink="/rxjs" class="menu-bar-font" mat-menu-item>Rxjs</button>
     </mat-menu>
     <span class="spacer"></span>
     <span class="spacer"></span>
