--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,7 +38,7 @@
     <div class="col-sm-3">
       <mat-card class="example-card">
         <mat-card-header>
-          <div mat-card-avatar class="rxjs-header-image"></div>
+          <div  mat-card-avatar class="rxjs-header-image"></div>
           <mat-card-title>RxJS</mat-card-title>
         </mat-card-header>
         <mat-card-content>
@@ -49,7 +49,7 @@
           </p> -->
         </mat-card-content>
         <mat-card-actions>
-          <button routerLink="/" mat-button>Learn</button>
+          <button routerLink="/rxjs" mat-button>Learn</button>
         </mat-card-actions>
       </mat-card>
     </div>
