Constants Post Added

--- a/src/app/c-language/cintroduction/cintroduction.component.html
+++ b/src/app/c-language/cintroduction/cintroduction.component.html
@@ -7,7 +7,7 @@
     LINUX and UNIX are written in C.
 </p>
 <h2>Facts About C Programming Language</h2>
-<div class="l-sub-section">
+<div class="l-sub-section"></div>
 <ul>
 <li>The C language was first formalized by American National Standards Institutes (ANSI) in the year 1988.</li>
 <li>C was invented to write UNIX operating system.</li>
@@ -136,3 +136,4 @@
 <p>I hope that this complete C tutorial guide will give you a clear idea about what is C language and complete knowledge on
     C programming. But before we enter in to programming you need to learn some basics concepts like what are constants,
     Variables, Identifiers and Keywords. We will discuss all these topics in the next chapter, stay tuned…</p>
+</div>
