--- a/src/app/c-language/cconstants/cconstants.component.html
+++ b/src/app/c-language/cconstants/cconstants.component.html
@@ -1,3 +1,158 @@
+<div class="main-container">
+  <h1>Constants in C</h1>
+  <p>In C, constants are fixed values in the program that may not change during the execution, whereas a variable is an entity
+    that may change during the execution. Constants are also called as ‘literals’. In this chapter we will discuss only constants,
+    Variables are discussed in next chapter.</p>
+  <h1>Types of C Constants</h1>
+  <p>In C constants are divided into two types.</p>
+  <ol>
+    <li>Primary Constants</li>
+    <li>Secondary Constants</li>
+  </ol>
+  <p>These Primary and Secondary Constants are further categorized several sub types as shown below.</p>
+  <img src="../../../assets/constants-in-c.png" height="100%" width="60%" />
+  <p>At this time we will discuss only the Primary Constants such as Integer constants, Floating-Point constants, Character
+    constants.
+  </p>
+  <h3>Integer Constants</h3>
+  <p>Integer constant is a numeric constant that may not associated with fractional or decimal point. Here we are providing
+    some rules for creating Integer constants.</p>
+  <ol>
+    <li>An Integer constant must have at least one number.</li>
+    <li>Integer constants must not have fractional part, decimal part or exponential part.</li>
+    <div class="code-text">
+      <code>Correct: 456</code>
+    </div>
+    <div class="code-text">
+      <code>Wrong: 45.6</code>
+    </div>
+    <li>You can use both positive (<span class="red">+</span>) or negative(<span class="red">-</span>).</li>
+    <div class="code-text">
+      <code>Correct: +567</code>
+    </div>
+    <div class="code-text">
+      <code>Correct: -567</code>
+    </div>
+    <li>If you not add any sign to an integer constant, the default sign is positive(<span class="red">+</span>).</li>
+    <li>Blank spaces, commas are not allowed within an integer constant.</li>
+    <div class="code-text">
+      <code>Wrong: 342 56</code>
+    </div>
+    <div class="code-text">
+      <code>Wrong: 342,56</code>
+    </div>
+  </ol>
+  <p>Here are some of the examples of Integer constants.</p>
+  <pre class="pre-text">
+<code [innerHTML]="polyfill"></code>
+</pre>
+  <h3>Floating Point Constants</h3>
+  <p>A Floating point constant are also called as Real Constants. It can be written in fractional form and exponential form.
+    Here are the rules for creating Floating Point constants.</p>
+  <ol>
+    <li>A Floating Point constant must have at least one number.</li>
+    <li>Floating point constants must have a fractional point or exponential.</li>
+    <div class="code-text">
+      <code>Correct: 567.32   //fractional</code>
+    </div>
+    <div class="code-text">
+      <code>Correct: 4.1e8   //exponential</code>
+    </div>
+    <div class="code-text">
+      <code>Wrong: 456</code>
+    </div>
+    <li>You can use both positive (<span class="red">+</span>) or negative(<span class="red">-</span>)</li>
+    <div class="code-text">
+      <code>Correct: +567.34</code>
+    </div>
+    <div class="code-text">
+      <code>Correct: -567.43</code>
+    </div>
+
+    <li>If you not add any sign to an Floating Point constant, the default sign is positive(<span class="red">+</span>).</li>
+    <li>Blank spaces, commas are not allowed within an Float Point constant.</li>
+    <div class="code-text">
+      <code>Wrong: 386 56</code>
+    </div>
+    <div class="code-text">
+      <code>Wrong: 386,56</code>
+    </div>
+  </ol>
+  <p>Here are some of the examples of Floating Point constants.</p>
+  <pre class="pre-text">
+<code [innerHTML]="float"></code>
+</pre>
+  <p>In Floating Point constants exponential form of representation is only used if the value is too small or too big. In exponential
+    form the part appearing before ‘e’ is called <span class="red">“Mantissa”</span> and after ‘e’ is called as <span class="red">“exponent”</span>.</p>
+  <p>Here are some of the examples of exponential constants</p>
+  <pre class="pre-text">
+  <code [innerHTML]="exponent"></code>
+  </pre>
+  <h3>Character Constants</h3>
+  <ol>
+    <li>A Character constant must be a single digit or a single alphabet.</li>
+    <li>It must be enclosed in single quotes (<span class="red">‘ ’</span>).</li>
+    <pre class="pre-text">
+  <code [innerHTML]="singleQuote"></code>
+  </pre>
+    <li>The length of a Character constant must be '1' character.</li>
+  </ol>
+  <p>Here are some of the examples of Character constant.</p>
+  <pre class="pre-text">
+<code [innerHTML]="charConst"></code>
+</pre>
+  <h3>String Constants</h3>
+  <ol>
+    <li>A String Constant is set of character which are enclosed in double quotes (<span class="red">“ ”</span>).</li>
+    <li>String constants contains characters that can be a digits, numbers or white spaces.</li>
+  </ol>
+  <p>Here are some of the examples of String constants.</p>
+  <pre class="pre-text">
+<code [innerHTML]="stringConst"></code>
+</pre>
+  <p>You can also break long line into multiple lines using string constant.</p>
+  <h2>Defining Constants</h2>
+  <p>You can define a constant in two ways.</p>
+  <ol>
+    <li>Const Keyword</li>
+    <li>#define preprocessor</li>
+  </ol>
+  <h3>1. Using Const Keywords</h3>
+  <p>You can use <span class="red">const</span> keyword to define constants in C programs.</p>
+  <strong>Syntax:</strong>
+  <div class="code-text">
+    <code>const  datatype  identifier = value;</code>
+  </div>
+  <strong>Example: </strong>
+  <pre class="pre-text">
+      <code [innerHTML]="defConst"></code>
+      </pre>
+  <p>In the above example, <span class="red">const</span> is keyword to defining a constant, <span class="red">int</span> is a datatype, <span class="red">a</span> is identifier and <span class="red">10</span> is a value which
+    is assigned to identifier '<span class="red">a</span>'. The value ‘<span class="red">10</span>’ cannot be changed in the program.</p>
+  <p>............................Code 1 Here.............................</p>
+  <p>The above program displays the following output.</p>
+  <img src="../../../assets/const-keyword.png" height="100%" width="60%" />
+  <p>If you want to change the value of ‘<span class="red">a</span>’, the program will result compile time error.</p>
+  <h3>2. Using #define Preprocessor</h3>
+  <p>You can use <span class="red">#define</span> Preprocessor to define a constant in c programs. It doesn’t end with semicolon(<span class="red">;</span>), because #define
+    preprocessor directive is just like #include.</p>
+  <strong>Syntax:</strong>
+  <div class="code-text">
+    <code>#define identifier Value</code>
+  </div>
+  <strong>Example: </strong>
+  <pre class="pre-text">
+      <code [innerHTML]="define"></code>
+      </pre>
+  <p>In the above example <span class="red">#define</span> is a preprocessor directive to define a constant, <span class="red">a</span> is a identifier and <span class="red">10</span> is a value which
+    is assigned to identifier '<span class="red">a</span>'.</p>
+  <p>............................Code 2 Here.............................</p>
+  <p>The above program displays the following output.</p>
+  <img src="../../../assets/define-constant.png" height="100%" width="60%" />
+  <p><strong>Bottom Line:</strong> Note that constants are fixed values in C program that may not change during the execution of a
+    program.</p>
+ 
+</div>
 <p>
-  <span class="red">cconstants works!</span>
+  <span class="red"></span>
 </p>
