added questions module.

--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -16,7 +16,7 @@
     </mat-menu>
     <span class="spacer"></span>
     <span class="spacer"></span>
-    <button class="title-font" mat-button>Interview Q</button>
+    <button class="title-font" routerLink="questions" mat-button>Interview Q</button>
     <button (click)="hireMe()" class="title-font" mat-button>Hire me</button>
   </mat-toolbar>
 
