SEO Titles added to constants post

--- a/src/app/c-language/cconstants/cconstants.component.html
+++ b/src/app/c-language/cconstants/cconstants.component.html
@@ -145,7 +145,7 @@
     <span class="red">10</span> is a value which is assigned to identifier '
     <span class="red">a</span>'. The value ‘
     <span class="red">10</span>’ cannot be changed in the program.</p>
-  <p>............................Code 1 Here.............................</p>
+  <p>...........Code1 Here..........................</p>    
   <p>The above program displays the following output.</p>
   <img src="../../../assets/const-keyword.png" height="100%" width="60%" />
   <p>If you want to change the value of ‘
