--- a/src/app/c-language/cintroduction/cintroduction.component.html
+++ b/src/app/c-language/cintroduction/cintroduction.component.html
@@ -7,7 +7,7 @@
     LINUX and UNIX are written in C.
   </p>
   <h2>Facts About C Programming Language</h2>
-  <div class="l-sub-section"></div>
+  <div class="l-sub-section">
   <ul>
     <li>The C language was first formalized by American National Standards Institutes (ANSI) in the year 1988.</li>
     <li>C was invented to write UNIX operating system.</li>
@@ -18,7 +18,7 @@
       change.
     </li>
   </ul>
-
+</div>
   <h2>Uses of C Programming Language</h2>
   <p>Initially C programs are developed to make-up the operating systems. Here are some of the examples of the uses of C programming.</p>
   <div class="l-sub-section">
