--- a/src/app/c-language/cconstants/cconstants.component.html
+++ b/src/app/c-language/cconstants/cconstants.component.html
@@ -4,7 +4,7 @@
     that may change during the execution. Constants are also called as ‘literals’. In this chapter we will discuss only constants,
     Variables are discussed in next chapter.</p>
   <h1>Types of C Constants</h1>
-  <p>In C constants are divided into two types.</p>
+  <p>In <a href='https://ifelseloop.com/c-programming' target='_blank'>C language</a> constants are divided into two types.</p>
   <ol>
     <li>Primary Constants</li>
     <li>Secondary Constants</li>
